crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@one_to_one_source_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class Profile(models.Model):
    id = models.UUIDField(primary_key=True)
    user = models.OneToOneField("User", on_delete=models.RESTRICT, related_name="+")

    class Meta:
        managed = False
        db_table = "profile"
