crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@one_to_one_source_Drizzle_pg.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const profile = pgTable("profile", {
  id: uuid("id").primaryKey(),
  userId: uuid("user_id").notNull(),
}, (t) => [
  foreignKey({ columns: [t.userId], foreignColumns: [user.id], name: "fk_profile__user_id" }),
  uniqueIndex("uq_profile__user_id").on(t.userId),
]);

export const profileRelations = relations(profile, ({ one, many }) => ({
  user: one(user, { fields: [profile.userId], references: [user.id] }),
}));
