crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@triple_reverse_relations_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 440
expression: rendered
---
export const dual = pgTable("dual", {
  username: text("username").primaryKey(),
});

export const dualRelations = relations(dual, ({ one, many }) => ({
  usernameTripleRel: many(tripleRel, { relationName: "TripleRelUsername" }),
  checkerUsernameTripleRel: many(tripleRel, { relationName: "TripleRelCheckerUsername" }),
  otherUsernameTripleRel: many(tripleRel, { relationName: "TripleRelOtherUsername" }),
}));
